--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>时光茶馆 · 代际交流（可直接运行）</title>
+  <title>时光茶馆 · 代际交流</title>
   <meta name="description" content="生活交流区、经验分享区、学习互助区、故事与记忆区、共创活动区；支持语音占位、每日话题、提问卡、经验之星、教学贴、故事录音、积分/勋章、兴趣结对、数字教室、线下安全须知等。">
   <!-- TailwindCSS Play CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -717,3 +717,4 @@
   </script>
 </body>
 </html>
+
